--- a/src/app/components/home/navbar/navbar.component.html
+++ b/src/app/components/home/navbar/navbar.component.html
@@ -1,8 +1,12 @@
-<ul class="nav justify-content-center">
+<div class="container d-flex justify-content-between">
+  <div>
+    <button type="button" class="btn btn-success"><i class="bi bi-list"></i>&nbsp; &nbsp;All Categories</button>
+  </div>
+  <ul class="nav justify-content-center">
     <li class="nav-item">
       <a class="nav-link active" aria-current="page" href="#">Home</a>
       <ul class="list-group">
-        <li class="list-group-item disabled" aria-disabled="true">A disabled item</li>
+        <li class="list-group-item">A first item</li>
         <li class="list-group-item">A second item</li>
         <li class="list-group-item">A third item</li>
         <li class="list-group-item">A fourth item</li>
@@ -12,7 +16,7 @@
     <li class="nav-item">
       <a class="nav-link" href="#">Shop</a>
       <ul class="list-group">
-        <li class="list-group-item disabled" aria-disabled="true">A disabled item</li>
+        <li class="list-group-item">A first item</li>
         <li class="list-group-item">A second item</li>
         <li class="list-group-item">A third item</li>
         <li class="list-group-item">A fourth item</li>
@@ -22,7 +26,7 @@
     <li class="nav-item">
       <a class="nav-link" href="#">Product</a>
       <ul class="list-group">
-        <li class="list-group-item disabled" aria-disabled="true">A disabled item</li>
+        <li class="list-group-item">A first item</li>
         <li class="list-group-item">A second item</li>
         <li class="list-group-item">A third item</li>
         <li class="list-group-item">A fourth item</li>
@@ -32,12 +36,57 @@
     <li class="nav-item">
       <a class="nav-link" href="#">Mega Menu</a>
       <ul class="list-group">
-        <li class="list-group-item disabled" aria-disabled="true">A disabled item</li>
+        <li class="list-group-item">A first item</li>
         <li class="list-group-item">A second item</li>
         <li class="list-group-item">A third item</li>
         <li class="list-group-item">A fourth item</li>
         <li class="list-group-item">And a fifth one</li>
       </ul>
     </li>
-    
+    <li class="nav-item">
+      <a class="nav-link" href="#">Blog</a>
+      <ul class="list-group">
+        <li class="list-group-item">A first item</li>
+        <li class="list-group-item">A second item</li>
+        <li class="list-group-item">A third item</li>
+        <li class="list-group-item">A fourth item</li>
+        <li class="list-group-item">And a fifth one</li>
+      </ul>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Pages</a>
+      <ul class="list-group">
+        <li class="list-group-item">A first item</li>
+        <li class="list-group-item">A second item</li>
+        <li class="list-group-item">A third item</li>
+        <li class="list-group-item">A fourth item</li>
+        <li class="list-group-item">And a fifth one</li>
+      </ul>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Seller</a>
+      <ul class="list-group">
+        <li class="list-group-item">A first item</li>
+        <li class="list-group-item">A second item</li>
+        <li class="list-group-item">A third item</li>
+        <li class="list-group-item">A fourth item</li>
+        <li class="list-group-item">And a fifth one</li>
+      </ul>
+    </li>
   </ul>
+  <div>
+    <button type="button" class="btn btn-success">Deal Today<i class="bi bi-lightning-charge mx-2"></i></button>
+  </div>
+</div>
+
+<div class="container mt-2">
+  <div class="row">
+    <div class="col-md-8">
+      <img src="../../../../assets/images/1.jpg" alt="" class="img-fluid">
+    </div>
+    <div class="col-md-4">
+      <img src="../../../../assets/images/2.jpg" alt="" class="" height="250px" width="400px">
+      <img src="../../../../assets/images/2.jpg" alt="" class="" height="250px" width="400px">
+    </div>
+  </div>
+</div>
