--- a/src/app/components/home/navbar/navbar.component.scss
+++ b/src/app/components/home/navbar/navbar.component.scss
@@ -5,3 +5,13 @@
 .nav-item:hover .list-group{
     display: block;
 }
+.list-group{
+    position: absolute;
+}
+.nav-link{
+    font-size: 14px;
+    color: black;
+}
+.btn{
+    font-size: 14px;
+}
