home compo complete

--- a/src/app/components/home/top-deals/top-deals.component.html
+++ b/src/app/components/home/top-deals/top-deals.component.html
@@ -1,12 +1,34 @@
 <div class="container mt-2">
-    <div class="row">
-        <div class="card" style="width: 16rem;" *ngFor="let item of topDealsList">
-            <img [src]="item.p_img_url" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+  <h3 class="text-center text-muted"><u>Best seller</u></h3>
+  <owl-carousel-o [options]="customOptions">
+    <ng-container *ngFor="let item of topDealsList; let i=index">
+      <ng-template carouselSlide [id]="'i'">
+        <div class="card mx-1 shadow-sm text-center" style="width: 14rem;">
+          <img [src]="item.p_img_url" class="card-img-top p-2 border" alt="...">
+          <div class="card-body border" style="height: 170px;">
+            <h5 class="card-title fs-6">{{item.llc_n}}</h5>
+            <div class="dropdown m-2">
+              <button class="btn btn-secondary btn-sm dropdown-toggle" type="button" id="dropdownMenuButton1"
+                data-bs-toggle="dropdown" aria-expanded="false">
+                {{item.w}}-{{item.sp}}
+              </button>
+              <ul class="dropdown-menu">
+                <li *ngFor="let qty of item.all_prods" (click)="setTotalPrice(i,qty)"><a class="dropdown-item">{{qty.w}}--{{qty.sp}}</a></li>
+              </ul>
             </div>
+            <p><span class="fs-12">MRP</span>&nbsp;<span
+                class="text-decoration-line-through fs-12">Rs&nbsp;{{item.dis_val}}</span>&nbsp;<span
+                class="fs-14 ms-2">Rs&nbsp;{{item.sp}}</span></p>
+            <p class="mt-2">
+              <span><span class="px-2 fs-12">Qty</span><input type="text" class="mx-1 w-25 qty-input"> <a
+                  class="mx-2 px-3 add-btn">ADD</a></span>
+            </p>
           </div>
-    </div>
+        </div>
+      </ng-template>
+    </ng-container>
+  </owl-carousel-o>
+  <p class="text-end">
+    <button type="button" class="btn btn-secondary" routerLink="/products-by-category">Show More</button>
+  </p>
 </div>
